# atlas

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: .ci.yml.un~  ci.yml
src/: lib.rs  test_utils.rs
src/configuration/: mod.rs
src/layout/: mod.rs
src/model/: mod.rs  rbm.rs  utils.rs
src/observable/: mod.rs  spin.rs
src/operator/: mod.rs  spin.rs
src/sampler/: mod.rs
src/space/: continuous.rs  core.rs  homogeneous.rs  mod.rs  spin.rs
src/state/: mod.rs
src/utils/: mod.rs
