[package]
name = "atlas"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust framework for variational models on structured configuration spaces."
repository = "https://github.com/Z-Denis/atlas"

[dependencies]
burn = { version = "0.21.0", features = ["flex", "ndarray"] }
burn-backend = "0.21.0"
num-traits = "0.2"
rand = "0.9"
